--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         </div>
                         <div class="form-group">
                             <label for="exampleInputFile" class="bmd-label-floating">Image</label>
-                            <input type="file" class="form-control-file" id="imageInput">
+                            <input type="file" class="file-select" id="imageInput" accept="image/*">
                         </div>
                         <button class="btn btn-default">Cancel</button>
                         <button type="submit" onClick='createDesigner()' class="btn btn-primary btn-raised">Submit</button>
